--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.0.1",
   "description": "el gato con botas bot con discord.js",
   "author": "morwull",
+  "maintainers": [
+    "Javier Gonzalez <xgc1986@gmail.com>"
+  ],
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.2.1",
-    "ffmpeg-binaries": "^4.0.0",
-    "opusscript": "0.0.6",
-    "profanities": "^2.6.0",
-    "ytdl-core": "^0.20.4"
+    "@types/node": "^12.0.8",
+    "@types/node-fetch": "^2.3.6",
+    "discord.js": "^11.5",
+    "dotenv": "^8.0.0",
+    "dropbox": "^4.0.27",
+    "ffmpeg": "^0.0",
+    "file-system": "^2.2.2",
+    "node-fetch": "^2.6.0",
+    "profanities": "^2.11",
+    "ts-node": "^8.2.0",
+    "typescript": "^3.5.2",
+    "ytdl-core": "^0.29"
+  },
+  "scripts": {
+    "start": "ts-node bin/bot.ts"
   }
 }
