--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "discord.js": "^11.5",
     "dotenv": "^8.0.0",
     "dropbox": "^4.0.27",
-    "ffmpeg": "^0.0",
     "file-system": "^2.2.2",
     "node-fetch": "^2.6.0",
-    "profanities": "^2.11",
     "ts-node": "^8.2.0",
-    "typescript": "^3.5.2",
-    "ytdl-core": "^0.29"
+    "typescript": "^3.5.2"
+  },
+  "devDependencies": {
+    "tslint": "^5.17"
   },
   "scripts": {
-    "start": "ts-node bin/bot.ts"
+    "start": "cp -f config/hooks/* .git/hooks && ts-node bin/bot.ts"
   }
 }
