fanart bot first steps

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
-NOTICIERO_TOKEN=BOT_TOKEN
+###> SYSTEM <###
 VERBOSE_LEVEL=1 # 0 - ALL | 1 - >= INFO | 2 - >= WARNING | 3 - >= ERROR
-DROPBOX_TOKEN=DROPBOX_TOKEN
+###> BOTS TOKENS <###
+NOTICIERO_TOKEN=BOT_TOKEN
 DEMO_TOKEN=DEMO_TOKEN
+###> EXTERNAL SERVICES <###
+DROPBOX_TOKEN=DROPBOX_TOKEN
+TWITTER_ACCESS_TOKEN_KEY=TWITTER_ACCESS_TOKEN_KEY
+TWITTER_ACCESS_TOKEN_SECRET=TWITTER_ACCESS_TOKEN_SECRET
+TWITTER_CONSUMER_KEY=TWITTER_CONSUMER_KEY
+TWITTER_CONSUMER_SECRET=TWITTER_CONSUMER_SECRET
