--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/node": "^12.0.8",
     "@types/node-fetch": "^2.3.6",
+    "@types/twitter": "^1.7.0",
     "discord.js": "^11.5",
     "dotenv": "^8.0.0",
     "dropbox": "^4.0.27",
@@ -17,7 +18,8 @@
     "node-fetch": "^2.6.0",
     "ts-node": "^8.2.0",
     "twitter": "^1.7.1",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "user-stream": "0.0.8"
   },
   "devDependencies": {
     "tslint": "^5.17"
