--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ TWITTER_ACCESS_TOKEN_KEY=TWITTER_ACCESS_TOKEN_KEY
 TWITTER_ACCESS_TOKEN_SECRET=TWITTER_ACCESS_TOKEN_SECRET
 TWITTER_CONSUMER_KEY=TWITTER_CONSUMER_KEY
 TWITTER_CONSUMER_SECRET=TWITTER_CONSUMER_SECRET
+TUMBLR_ACCESS_TOKEN_KEY=TUMBLR_ACCESS_TOKEN_KEY
+TUMBLR_ACCESS_TOKEN_SECRET=TUMBLR_ACCESS_TOKEN_SECRET
+TUMBLR_CONSUMER_KEY=TUMBLR_CONSUMER_KEY
+TUMBLR_CONSUMER_SECRET=TUMBLR_CONSUMER_SECRET
