--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "file-system": "^2.2.2",
     "node-fetch": "^2.6.0",
     "ts-node": "^8.2.0",
+    "tumblr.js": "^2.0.2",
     "twitter": "^1.7.1",
     "typescript": "^3.5.2",
     "user-stream": "0.0.8"
