--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 ###> SYSTEM <###
 VERBOSE_LEVEL=1 # 0 - ALL | 1 - >= INFO | 2 - >= WARNING | 3 - >= ERROR
 ###> BOTS TOKENS <###
+ELGATO_TOKEN=ELGATO_TOKEN
 NOTICIERO_TOKEN=BOT_TOKEN
 DEMO_TOKEN=DEMO_TOKEN
 ###> EXTERNAL SERVICES <###
